// Copyright 2024 Google LLC. All Rights Reserved.
// 
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
// 
//     http://www.apache.org/licenses/LICENSE-2.0
// 
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";
// All generated protos should be opaque, with "xxx_hidden_" prepended to their field names.


package dcl;

import "proto/connector/sdk.proto";
import "proto/empty.proto";


message IamBetaServiceAccount {
  string name = 1;
  string project = 2;
  string unique_id = 3;
  string email = 4;
  string display_name = 5;
  string description = 6;
  string oauth2_client_id = 7;
  IamBetaServiceAccountActasResources actas_resources = 8;
  bool disabled = 9;
}

message IamBetaServiceAccountActasResources {
  repeated IamBetaServiceAccountActasResourcesResources resources = 1;
}

message IamBetaServiceAccountActasResourcesResources {
  string full_resource_name = 1;
}

message ApplyIamBetaServiceAccountRequest {
  IamBetaServiceAccount resource = 1;
  repeated LifecycleDirective lifecycle_directives = 2;
  string service_account_file = 3;
}

message DeleteIamBetaServiceAccountRequest {
  string service_account_file = 1;
  IamBetaServiceAccount resource = 2;
}

message ListIamBetaServiceAccountRequest {
  string service_account_file = 1;
  string Project = 2;
}

message ListIamBetaServiceAccountResponse {
  repeated IamBetaServiceAccount items = 1;
}

service IamBetaServiceAccountService {
  rpc ApplyIamBetaServiceAccount(ApplyIamBetaServiceAccountRequest) returns (IamBetaServiceAccount);
  rpc DeleteIamBetaServiceAccount(DeleteIamBetaServiceAccountRequest) returns (google.protobuf.Empty);
  rpc ListIamBetaServiceAccount(ListIamBetaServiceAccountRequest) returns (ListIamBetaServiceAccountResponse);
}
